--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,10 @@
     "firebase": "^12.3.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "stripe": "^16.0.0",
+    "@stripe/stripe-js": "^4.0.0",
+    "@stripe/react-stripe-js": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
